# SimpleParser

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.myc
Content/: FunctionDefinition.cpp  FunctionDefinition.h  Parser.cpp  Parser.h  Statement.cpp  Statement.h  TokenBuilding.cpp  TokenBuilding.h  Type.h
